--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "prettier": "^2.4.1",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-template-compiler": "^2.6.14"
   }
