--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuelidate/validators": "^2.0.3",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.9",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
