--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.9",
+    "firebase": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
@@ -34,7 +35,7 @@
     "@vue/test-utils": "^1.1.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-jest": "^27.0.6",
-    "cypress": "^9.7.0",
+    "cypress": "^4.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
